<resources>
    <string name="app_name">Go Bayan</string>
    <string name="near_by">near by</string>
    <string name="action_settings">settings</string>
    <string name="message_loading_data">loading data&#8230;</string>
    <string name="message_network_is_unavailable">network is unavailable</string>
    <string name="message_server_error">Server error, error try again later.</string>
    <string name="message_error_cant_extract_server_response">Error. No response from the server</string>
    <string name="tel">Phone</string>
    <string name="message_please_wait">Please wait&#8230;</string>
    <string name="loading">Loading</string>
    <string name="Setting">Settings</string>
    <string name="finding_service">Find the network</string>
    <string name="administrator">Management</string>
    <string name="order_no">Order no</string>
    <string name="date_creator">Order date</string>
    <string name="total_amountnew">Total amount</string>
    <string name="status_new">Status</string>
    <string name="lbl_new">New</string>
    <string name="test_string">Now we must provide some necessary XML files to define layouts. Because of we will set a ProgressBar at the bottom of RecyclerView when data is loading, it will have two item types. The normal item that to show info of user and loading item that place at bottom to show progress bar.</string>
    <string name="_3_deals_available">3 Offers Available</string>
    <string name="off_20">%20 Discount</string>
    <string name="emailnew">Email</string>
    <string name="call_restaurant">Contact the store to confirm the order or for delivery</string>
    <string name="about">About</string>
    <string name="aboutus">About us</string>
    <string name="no_more_data">No more data</string>
    <string name="title_bank_info">Bank account information:</string>
    <string name="products">Products</string>
    <string name="restaurant_found">Existing stores</string>
    <string name="ok">Ok</string>
    <string name="all_cities">All cities</string>
    <string name="all_categories">All categories</string>
    <string name="lbl_id">Definition</string>
    <string name="you_had_all_of_comments_already">You have all the comments.</string>
    <string name="item_is_existed_my_cart">This order is in the cart</string>
    <string name="item_is_added_my_cart">This order is added to the cart</string>
    <string name="have_error">Error Try again please</string>
    <string name="processing">Processing</string>
    <string name="currency">D.L </string>
    <string name="home">Home</string>
    <string name="home_upper_case">Home page</string>
    <string name="search">Search</string>
    <string name="search_upper_case">Search</string>
    <string name="searchShop">Find a shop</string>
    <string name="searchMenu">Search for a product</string>
    <string name="categories">Categories</string>
    <string name="myMenu">My Menu</string>
    <string name="my_cart_upper_case">Cart</string>
    <string name="orderDetails">Order Details</string>
    <string name="payment_information">Payment Information</string>
    <string name="payment_methods">Payment methods</string>
    <string name="payment_methods_select">Select payment methods</string>
    <string name="payment_successfully">Payment successfully</string>
    <string name="total">Total</string>
    <string name="buyer_information">Buyer information</string>
    <string name="name">Name</string>
    <string name="email_info">Email</string>
    <string name="phone_info">Phone</string>
    <string name="phone_info_about">Phone</string>
    <string name="address_info">Address</string>
    <string name="city">City</string>
    <string name="zip_code">zip code</string>
    <string name="deliveryInfo">Delivery Information</string>
    <string name="same_as_buyer">Same as buyer</string>
    <string name="continue_upper_case">Done</string>
    <string name="account">Account</string>
    <string name="account_upper_case">Account settings</string>
    <string name="login_upper_case">Sign in</string>
    <string name="history">History</string>
    <string name="register_shop_owner">Register shop owner</string>
    <string name="myAccount">myAccount</string>
    <string name="edit_profile">Edit profile</string>
    <string name="preferences">Favorites</string>
    <string name="my_favourites">My Favorites</string>
    <string name="feedBack">FeedBack</string>
    <string name="feedBack_text">Send message to the management</string>
    <string name="detail">Details</string>
    <string name="setting">Settings</string>
    <string name="timeable">جدول مواعيد</string>
    <string name="menu">Products</string>
    <string name="product_upper_case">Products</string>
    <string name="shops">Shops</string>
    <string name="shops_upper_case">Shops</string>
    <string name="all">All</string>
    <string name="map">Map</string>
    <string name="map_upper_case">Map</string>
    <string name="direction">Direction</string>
    <string name="phoneNumber">Phone</string>
    <string name="bestDeals">Best Deals</string>
    <string name="menus">Products</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="OpenHour">Open Hours</string>
    <string name="titleDialogOpenHour">34 hours</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="lblNoteTime">Note: The green timing is working hours for the next day</string>
    <string name="login">Login</string>
    <string name="login_facebook">Register with a Facebook account</string>
    <string name="forget_password">Forgot your password</string>
    <string name="forget_password_title">Forgot your password</string>
    <string name="forget_password_content">Please fill in your email in the form and send it to us. We will reset your password and send it back to your email</string>
    <string name="register">Register</string>
    <string name="account_information">Account info</string>
    <string name="personal_information">Personal info</string>
    <string name="address_information">Address info</string>
    <string name="report">Report</string>
    <string name="logout">Logout</string>
    <string name="save_changes">Save changes</string>
    <string name="updateInfor">Update profile</string>
    <string name="update">Update</string>
    <string name="updatePass">Update password</string>
    <string name="myInfo">My Info</string>
    <string name="userHint">User name</string>
    <string name="password">Password</string>
    <string name="repassword">Confirm password</string>
    <string name="mail">Email</string>
    <string name="fullName">Full name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="Ok">Ok</string>
    <string name="Des">Description</string>
    <string name="SearchFor">Search</string>
    <string name="shop">Shops</string>
    <string name="title">title</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_upper_case">Add</string>
    <string name="to_cart">To cart</string>
    <string name="add_review">Add review</string>
    <string name="order">Order</string>
    <string name="order_upper_case">Order</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="sum">Total</string>
    <string name="btn_send">Send</string>
    <string name="search_key">Search</string>
    <string name="add">add</string>
    <string name="vat">vat</string>
    <string name="ship">shipping</string>
    <string name="item">item</string>
    <string name="items">items</string>
    <string name="home_menu_title">Products within 10 km</string>
    <string name="home_shop_title">Shops within 10 km</string>
    <string name="rating">rating</string>
    <string name="rate">rate</string>
    <string name="fullname">اFull name</string>
    <string name="content">content</string>
    <string name="your_review">your review</string>
    <string name="reviews">Reviews</string>
    <string name="review">Reviews</string>
    <string name="add_your_review">Add review</string>
    <string name="load_more">load more</string>
    <string name="distance">distance</string>
    <string name="max_distance">10Km</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="just_now">just now</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="two_days_ago">two days ago</string>
    <string name="three_days_ago">3 days ago</string>
    <string name="forward_slash_item">item</string>
    <string name="lblPassword">Password</string>
    <string name="lblPasswordNew">New Password</string>
    <string name="lblPasswordOld">Old Password</string>
    <string name="lblfullname">Full name</string>
    <string name="lblPassAgain">confirm password</string>
    <string name="lblEmail">Email</string>
    <string name="lblphone">Phone</string>
    <string name="lblAddress">Address</string>
    <string name="orders_in_histories">orders histories</string>
    <string name="error_UserName_empty">Please enter a username</string>
    <string name="error_title_empty">Please enter title </string>
    <string name="error_des_empty">Please enter a description</string>
    <string name="error_Password_empty">Please enter password</string>
    <string name="error_PasswordNew_empty">Please enter new passwordة</string>
    <string name="error_Password_Wrong">Password is wrong</string>
    <string name="error_RePassword_empty">confirm password</string>
    <string name="error_RePassword_wrong">Confirm Password Wrong</string>
    <string name="error_Email_empty">The email is wrong</string>
    <string name="error_Email_wrong">Email format is wrong</string>
    <string name="error_FullName">Please enter the full name</string>
    <string name="error_Phone">Please enter the full number</string>
    <string name="error_Address">Please enter the address</string>
    <string name="error_city">Please enter the city</string>
    <string name="error_zip_code">Zip Code</string>
    <string name="type">type</string>
    <string name="update_status">Update status</string>
    <string name="on_the_way">On the way</string>
    <string name="delivered">Delivered</string>
    <string name="fail_delivery">Fail delivery</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="text_distance">distance</string>
    <string name="value_distance">Distance: %s Km</string>
    <string name="text_0_km">0 Km</string>
    <string name="text_45_km">45 Km</string>
    <string name="sort_by">Sort By</string>
    <string name="order_buyer">Buyer</string>
    <string name="order_status">Status</string>
    <string name="order_accept">Order accepted</string>
    <string name="reject_information_not_enough">rejected information not enough</string>
    <string name="reject_quantity_not_available">rejected quantity not available</string>
    <string name="order_number_1">Order number</string>
    <string name="select_extra_options">select extra options</string>
    <string name="in_progress">in progress</string>
    <string name="ready_for_collect">ready for collect</string>
    <string name="order_cancel">cancel</string>
    <string name="order_all">All the orders</string>
    <string name="order_waiting">order_waiting</string>
    <string name="order_date">Order date</string>
</resources>