<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog">

    <TextView
        style="@style/tvMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sort_by"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border_color"/>

    <TextView
        style="@style/tvReg"
        android:id="@+id/tv_sort_by_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sort_by_rating"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:clickable="true"
        android:focusable="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_light"/>

    <TextView
        style="@style/tvReg"
        android:id="@+id/tv_sort_by_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sort_by_name"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_light"/>

    <TextView
        style="@style/tvReg"
        android:id="@+id/tv_sort_by_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sort_by_date"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>