<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.libyasolutions.libyamarketplace.widget.TextViewFontH1
        android:id="@+id/tv_distance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_distance"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/view_divider"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@drawable/bg_red_button_with_border"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_distance_title"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.libyasolutions.libyamarketplace.widget.TextViewFontH2
        android:id="@+id/tv_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_distance"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider" />

    <com.libyasolutions.libyamarketplace.widget.TextViewFontH2
        android:id="@+id/tv_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/text_45_km"
        android:textSize="22sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_distance" />

    <com.libyasolutions.libyamarketplace.widget.TextViewFontH2
        android:id="@+id/tv_max_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_0_km"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_all"
        app:layout_constraintBottom_toBottomOf="@id/tv_all"/>

    <SeekBar
        android:id="@+id/sb_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>