<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical">

    <com.libyasolutions.libyamarketplace.widget.TextViewFontH1
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/update_status"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="18sp" />

    <View
        android:id="@+id/vieww"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/red" />

    <ListView
        android:id="@+id/lv_status"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.libyasolutions.libyamarketplace.widget.MyButton
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/red_border"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <com.libyasolutions.libyamarketplace.widget.MyButton
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_2x"
            android:layout_weight="1"
            android:background="@drawable/red_border"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>
</LinearLayout>