<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_7x"
        android:background="@color/primary_dark"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/dimen_x3x"
            android:layout_height="@dimen/dimen_x3x"
            android:layout_marginLeft="@dimen/dimen_1x"
            android:layout_marginRight="@dimen/dimen_1x"
            android:background="@drawable/ic_backs"
            android:contentDescription="@string/app_name" />

        <com.libyasolutions.libyamarketplace.widget.TextViewFontH1
            android:id="@+id/lblShopName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedBack"
            android:textColor="@color/cl_white"
            android:textSize="@dimen/text_size_normal_3x" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_1x"
            android:orientation="vertical">

            <com.libyasolutions.libyamarketplace.widget.TextViewFontH2
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_normal"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal_size" />

            <com.libyasolutions.libyamarketplace.widget.MyEditText
                android:id="@+id/edtTitleFB"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_button_top_width_height"
                android:background="@drawable/custom_layout_radius"
                android:ems="10"
                android:inputType="textMultiLine"
                android:paddingLeft="@dimen/margin_normal"
                android:paddingRight="@dimen/margin_normal">

                <requestFocus />
            </com.libyasolutions.libyamarketplace.widget.MyEditText>

            <com.libyasolutions.libyamarketplace.widget.TextViewFontH2
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_normal"
                android:paddingTop="@dimen/margin_normal"
                android:text="@string/type"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal_size" />

            <Spinner
                android:id="@+id/spnType"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_5x"
                android:background="@drawable/bg_custom_spinner" />

            <com.libyasolutions.libyamarketplace.widget.TextViewFontH2
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_normal"
                android:paddingTop="@dimen/margin_normal"
                android:text="@string/Des"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal_size" />

            <com.libyasolutions.libyamarketplace.widget.MyEditText
                android:id="@+id/edtDesFB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_layout_radius"
                android:gravity="left|top"
                android:inputType="textMultiLine"
                android:lines="6"
                android:padding="@dimen/dimen_1x" />


            <com.libyasolutions.libyamarketplace.widget.TextViewFontH2
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dimen_1x"
                android:layout_marginTop="@dimen/dimen_2x"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:paddingBottom="@dimen/dimen_1x"
                android:paddingLeft="@dimen/dimen_4x"
                android:paddingRight="@dimen/dimen_4x"
                android:paddingTop="@dimen/dimen_1x"
                android:text="@string/send"
                android:textColor="@color/cl_white"
                android:textSize="@dimen/text_size_normal_3x" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>